// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders apple icon 1`] = `
<svg
  className="icon base"
  viewBox="0 0 1024 1024"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className=""
    d="M789.153 536.624c-1.148-127.683 104.548-189.801 109.381-192.693-59.858-87.274-152.641-99.199-185.245-100.15-77.926-8.201-153.512 46.627-193.208 46.627-40.486 0-101.616-45.838-167.497-44.487-84.779 1.306-164.090 50.391-207.589 126.613-89.77 155.414-22.818 383.801 63.188 509.425 43.024 61.524 93.297 130.219 159.099 127.802 64.378-2.657 88.422-41.042 166.111-41.042 76.974 0 99.556 41.042 166.665 39.496 69.089-1.109 112.59-61.8 154.106-123.881 49.718-70.519 69.686-139.964 70.478-143.529-1.627-0.557-134.181-51.146-135.487-204.181zM662.381 161.14c34.626-43.299 58.316-102.21 51.737-161.991-50.116 2.218-112.788 34.666-148.877 77.014-31.93 37.316-60.455 98.486-53.087 156.009 56.296 4.199 114.094-28.407 150.224-71.031z"
  />
</svg>
`;

exports[`renders dashboard icon 1`] = `
<svg
  className="icon base"
  viewBox="0 0 1024 1024"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className=""
    d="M852.907 170.667h-681.387c-47.787 0-86.187 38.4-86.187 86.187v510.72c0 47.36 38.4 86.187 86.187 86.187h681.387c47.36 0 86.187-38.4 86.187-86.187v-510.72c-0.427-47.787-38.827-86.187-86.187-86.187zM341.333 768h-170.667v-512h170.667v512zM853.333 768h-426.667v-341.333h426.667v341.333zM853.333 341.333h-426.667v-85.333h426.667v85.333z"
  />
</svg>
`;

exports[`renders large arrowDown icon 1`] = `
<svg
  className="icon large"
  viewBox="0 0 1024 1024"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className=""
    d="M328.677 353.767c-8.333-8.309-19.249-12.453-30.16-12.433-10.876 0.019-21.745 4.175-30.042 12.466s-12.456 19.153-12.475 30.021c-0.019 10.918 4.139 21.842 12.475 30.172l213.334 213.51c8.337 8.333 19.264 12.497 30.191 12.497s21.854-4.164 30.191-12.497l213.333-213.33c8.337-8.33 12.497-19.254 12.476-30.172-0.021-10.868-4.177-21.729-12.476-30.021-8.294-8.291-19.166-12.447-30.042-12.466-10.91-0.019-21.828 4.125-30.161 12.433l-183.322 182.979-183.323-183.159z"
  />
</svg>
`;

exports[`renders small more icon 1`] = `
<svg
  className="icon small"
  viewBox="0 0 1024 1024"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className=""
    d="M170.667 512c0-47.13 38.205-85.333 85.333-85.333s85.333 38.204 85.333 85.333c0 47.13-38.205 85.333-85.333 85.333s-85.333-38.204-85.333-85.333zM426.667 512c0-47.13 38.204-85.333 85.333-85.333s85.333 38.204 85.333 85.333c0 47.13-38.204 85.333-85.333 85.333s-85.333-38.204-85.333-85.333zM768 426.667c-47.13 0-85.333 38.204-85.333 85.333s38.204 85.333 85.333 85.333c47.13 0 85.333-38.204 85.333-85.333s-38.204-85.333-85.333-85.333z"
  />
</svg>
`;
